--- a/css/style.css
+++ b/css/style.css
@@ -433,11 +433,11 @@ a.button.outline-btn {
     opacity: 0;
 }
 
-.affix-logo {
-    float: left;
-    width: 160px;
-    transition: all 0.1s ease;
-}
+// .affix-logo {
+//     float: left;
+//     width: 160px;
+//     transition: all 0.1s ease;
+// }
 
 
 /*
@@ -939,7 +939,7 @@ input:checked+.slider:before {
 
 .tabs li a {
     color: #fff;
-    padding: 17px 20px 13px;
+    padding: 16px 20px 11px;
     float: left;
     opacity: 0.7;
     font-weight: 600;
@@ -1204,10 +1204,6 @@ input[type=text] {
     padding: 0px 0 0 35px;
     border-radius: 0;
     color: #fff;
-    -webkit-transition: all 0.2s ease;
-    -moz-transition: all 0.2s ease;
-    -o-transition: all 0.2s ease;
-    transition: all 0.2s ease;
 }
 
 .nav-secondary .search-form input[type=search]:focus {
@@ -1752,6 +1748,23 @@ footer {
         border-bottom: 1px solid #3a546d;
         height: 145px;
     }
+    .sidebar{
+        background: #15212e;
+        padding-top: 140px;
+    }
+
+    .sidebar-home,
+    .sidebar-home .affix {
+        background: #192837;
+        width: 100%;
+    }
+
+    .sidebar-home {
+        padding-top: 0px;
+    }
+    .sidebar-home .affix {
+        padding-top: 50px;
+    }
     .nav-sidebar ul li a.active,
     .nav-sidebar.nav>li>a:focus {
         cursor: default;
@@ -1759,15 +1772,15 @@ footer {
         font-weight: 600;
     }
     .sidebar ul li a,
+    .nav-sidebar ul li a,
+    .nav-sidebar ul li li a,
+    .nav-sidebar ul li a:focus,
     .nav-sidebar ul li a.active {
-        color: #ffffff;
+        color: #fff;
     }
-    .nav-secondary .search-form {
-        margin: 10px 10px 0 0px;
-        width: 340px;
-    }
+    .nav-secondary input[type=search],
     .nav-secondary-tabs .search-form input[type=search] {
-        width: 340px;
+        width: 260px;
     }
     .nav-secondary .search-form input[type=search]:focus {
         background: rgb(29, 60, 76) url("/images/search.png") no-repeat;
@@ -1776,7 +1789,7 @@ footer {
         color: #fff;
     }
     .nav-secondary-tabs {
-        height: 105px;
+        height: 108px;
     }
     .nav-secondary-tabs.affix {
         background: #192837;
@@ -1784,11 +1797,7 @@ footer {
         top: 0;
         position: fixed;
         z-index: 100;
-        height: 110px;
-    }
-    .sidebar {
-        background: #15212e;
-        padding-top: 140px;
+        height: 106px;
     }
     #sidebar-wrapper-home,
     #sidebar-wrapper-home.affix {
@@ -1799,12 +1808,12 @@ footer {
     }
     .tabs {
         height: 50px;
-        padding: 0 0 0 12px;
+        padding-left: 9px;
         width: auto;
     }
     .tabs li a {
         color: #fff;
-        padding: 15px 6px 10px 6px;
+        padding: 13px 5px 8px 7px;
         float: left;
         opacity: 0.7;
         font-size: 12px;
@@ -1872,6 +1881,9 @@ footer {
     .ctrl-right {
         display: none;
     }
+    // button.navbar-toggle.collapsed {
+    //     margin: 15px 15px 0 0;
+    // }
 }
 
 
@@ -1886,19 +1898,17 @@ footer {
     .navbar-nav .open .dropdown-menu>li>a {
         background: red;
     }
-    .sidebar-home {
-        background-color: #FBFBFC;
-        border-right: 1px solid rgba(204, 204, 204, 0.29);
-        width: 210px;
-    }
+    // .sidebar-home {
+    //     background-color: #FBFBFC;
+    //     border-right: 1px solid rgba(204, 204, 204, 0.29);
+    //     width: 210px;
+    // }
     .ctrl-right {
         float: right;
         padding: 5px 16px 0;
     }
     .nav-secondary .search-form {
-        float: left;
-        // width: 560px;
-        margin: 10px 5px 0 10px;
+        margin: 14px 10px 5px 0;
     }
     .sidebar-home {}
     #sidebar-wrapper {
@@ -1907,12 +1917,12 @@ footer {
     #sidebar-wrapper-home {
         display: none;
     }
+    .ctrl-right {
+        /** temporarily hide **/
+        display: none;
+    }
 }
-// @media (max-width: 768px) {
-//     #sidebar-wrapper-home {
-//         display: block;
-//     }
-// }
+
 
 /*
 *
