Fixing JS error/Docker 1.13>17.03

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -32,7 +32,7 @@
                 <a href="javascript:void(0)" id="menu-toggle"><i class="fa fa-indent" aria-hidden="true"></i></a>
                 <div class="btn-group">
                     <button type="button" class="btn btn-default dropdown-btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Docker 1.13 <span class="caret"></span>
+                        Docker 17.03 (current) <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
                         {% for item in site.data.docsarchive.docker-compose %}
