--- a/_layouts/docs.html
+++ b/_layouts/docs.html
@@ -39,15 +39,19 @@ else %}{% assign edit_url = "" %}{% endif %} {% break %} {% endif %} {% endfor %
 	</script>
 	{% if site.GH_ENV == "gh_pages" %}
 	<meta name="robots" content="noindex">{% endif %}
-	<meta property="og:type" content="website">
-	<meta property="og:updated_time" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}">
-	<meta property="og:image" content="https://www.docker.com/sites/default/files/social/docker-facebook-share.png">
-	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@docker_docs">
-	<meta name="twitter:url" content="https://twitter.com/docker_docs">
-	<meta name="twitter:title" content="{{ page.title }}">
-	<meta name="twitter:image:src" content="https://www.docker.com/sites/default/files/social/docker-twitter-share.png">
-	<meta property="article:published_time" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}">
+	<meta property="og:type" content="website"/>
+	<meta property="og:updated_time" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}"/>
+	<meta property="og:image" itemprop="image primaryImageOfPage" content="https://www.docker.com/sites/default/files/social/docker-facebook-share.png"/>
+	<meta name="twitter:card" content="summary"/>
+	<meta name="twitter:domain" content="docs.docker.com"/>
+	<meta name="twitter:site" content="@docker_docs"/>
+	<meta name="twitter:url" content="https://twitter.com/docker_docs"/>
+	<meta name="twitter:title" itemprop="title name" content="{{ page.title }}"/>
+	<meta name="twitter:description" property="og:description" itemprop="description" content="{{ content | strip_html | truncatewords: 30}}" />
+	<meta name="twitter:image:src" content="https://www.docker.com/sites/default/files/social/docker-twitter-share.png"/>
+	<meta name="twitter:image:alt" content="Docker Documentation"/>
+	<meta property="article:published_time" content="{% if page.date %}{{ page.date | date_to_xmlschema }}{% else %}{{ site.time | date_to_xmlschema }}{% endif %}"/>
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="keywords" content="{% if page.keywords %}{{ page.keywords }}{% else %}docker, docker open source, docker platform, distributed applications, microservices, containers, docker containers, docker software, docker virtualization{% endif %}">
 	<link rel="stylesheet" href="/css/font-awesome.min.css">
