--- a/css/temp.css
+++ b/css/temp.css
@@ -3,6 +3,11 @@
 * this css will be integrated into master. for now testing.......
 *
 */
+.toc-nav
+{
+  padding-bottom: 50px !important;
+}
+
 .alert-info {
     border: 0;
     border-radius: 0;
